--- a/.poggit.yml
+++ b/.poggit.yml
@@ -5,4 +5,7 @@ branches:
 projects:
   NBTEditor:
     path: ""
+    libs:
+      - src: dktapps-pm-pl/pmforms/pmforms
+        version: ^2.0.0
 ...
